[package]
name = "shellordclips"
version = "1.3.6"
authors = ["Miguel J. Carmona (MIBALTOALEX) <miguel[at]mibaltoalex[dot]com>"]
description = "ShellOrdClips is a clipboard cross-platform for setting the contents of an file to base64."
license = "Apache-2.0"
repository = "https://github.com/MiBaLToALeX/ShellOrd/tree/main/modules/tools/shellordclips"
keywords = ["clipboard", "shellord", "shellordclips"]

[[bin]]
name = "shellordclips"
path = "src/main.rs"

[dependencies]
base64 = "0.13.0"
clipboard = "0.5.0"
flate2 = "1.0.22"
